--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -137,7 +137,7 @@
     "T = np.float32([[1,0,550],[0,1,650]])\n",
     "tmp = cv2.warpAffine(tmp, T, tmp.shape[1::-1])\n",
     "\n",
-    "imshow(tmp)"
+    "imshow(tmp)\n"
    ]
   },
   {
